<resources>
    <string name="app_name">TravelApplication</string>
    <string name="log_in">Log in</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="no_account_login">Don\'t have an account ?</string>
    <string name="airplane">Airplane</string>
    <string name="new_account">New Account</string>
    <string name="upload_you_profile_picture">Upload your profile picture</string>
    <string name="already_registered_sign_in_here">Already registered? Sign in here</string>
    <string name="user_name">User Name</string>
    <string name="password_signup">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android\.studio\@android\.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="start">start</string>
    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="upcoming">Upcoming</string>
    <string name="sign_out">Sign out</string>
    <string name="history_map">History Map</string>
    <string name="fab">FAB</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="trip_type">Trip Type</string>
    <string name="trip_start_point">Trip Start Point</string>
    <string name="trip_end_point">Trip End Point</string>
    <string name="trip_name">Trip Name</string>
    <string name="name">Name</string>
    <string name="trip_date">Trip Date</string>
    <string name="trip_time">Trip Time</string>
    <string name="trip_return_date">Trip Return Date</string>
    <string name="trip_return_time">Trip Return Time</string>
    <string name="tripia">Tripia</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="return_to_login">Return to Login</string>
    <string name="travel_when">travel when</string>
    <string name="travel_name">travel name</string>
    <string name="over">over</string>
    <string name="travel_from">Travel From</string>
    <string name="travel_to">Travel To</string>
    <string name="date">date</string>
    <string name="travel_time">travel time</string>
    <string name="todo">TODO</string>
</resources>