<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/higher_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/icons8_up"
            android:title="@string/upcoming" />
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_history_map"
            android:icon="@drawable/icons8_location"
            android:title="@string/history_map" />
    </group>
    <group android:id="@+id/lower_group">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/sign_out" />
    </group>
</menu>